--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               width="204"
               height="204"
             />
-            <h1>Nural Karimov</h1>
+            <h1>Nura Karimov</h1>
             <h2>Junior Frontend Developer</h2>
           </header>
           <main>
